--- a/src/BodyComp/BodyComp.css
+++ b/src/BodyComp/BodyComp.css
@@ -1,16 +1,42 @@
-.Menus{
-  display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+.foodCourtBody {
+  background-image: url('../../public/foodCourt.jpg');
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: white;
+
 }
 
-.box{
+.foodCourtText {
+  position: absolute;
+  top: 30%;
+  left: 13%;
+}
+
+.searchbar {
+  margin-top: 10px;
+  margin: 10px;
+  width: 500px;
+}
+
+.exploreButton {
+  width: 20%;
+  height: 30px;
+  background-color: cadetblue;
+  border: 1px solid black;
+  border-radius: 7px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px #034152
+}
+
+.box {
   height: 350px;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid;
-    border-radius: 10px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid;
+  border-radius: 10px;
 }
