--- a/src/HeaderComp/Header.css
+++ b/src/HeaderComp/Header.css
@@ -31,12 +31,12 @@
     width: 60%;
     padding: 15px;
   }
-  .searchbar{
+  /* .searchbar{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin: 10px;
-  }
+  } */
 
   
   .box{
