--- a/src/HomeComp/Menu.css
+++ b/src/HomeComp/Menu.css
@@ -1,8 +1,11 @@
 .boxHeader{
+    font-variant-caps: all-small-caps;
+    font-weight: 500;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 5px;
+    color: #933628;
 }
 
 .Menus{
@@ -11,4 +14,45 @@
       justify-content: space-around;
       align-items: center;
       margin-top: 10px;
+      flex-wrap: wrap;
+}
+
+
+.box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    background-color:rgb(240, 226, 208);
+    display: inline-block;
+    border-style: none;
+    width: 280px;
+    padding: 5px;
+    margin: 5px;
+    box-shadow: 5px 5px 5px #ac8d8d;
+}
+
+.box:hover{
+    background-color:rgb(230, 171, 94);
+ 
+}
+.shopDescription{
+    height: 70px;
+    overflow: hidden;
+    font-size: small;
+}
+
+.getMenuButton{
+    width: 40%;
+  height: 30px;
+  background-color: rgb(238, 139, 73);
+  border-style: none;
+  border-radius: 7px;
+  box-shadow: 5px 5px 5px #ac8d8d;
+  
+}
+
+.getMenuButton:hover{
+    background-color: rgb(124, 53, 6);
+    color: rgb(238, 139, 73);;
 }
